src/objects/Product_Attribute_Value_extension__c/Product_Attribute_Value_extension__c.object-meta.xml
<CustomObject>
    <label>Product Attribute Value extension</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Attribute Value extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Value extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>