src/objects/Product_Attribute_Value_extension__c/fields/Adv_Device_Analyzer_online__c.field-meta.xml
<CustomField>
    <fullName>Adv_Device_Analyzer_online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impact Direct Field</description>
    <label>Adv Device Analyzer online</label>
    <type>Checkbox</type>
</CustomField>