src/objects/Product_Attribute_Value_extension__c/fields/Existing_Software_Subscription_Plan_AMS__c.field-meta.xml
<CustomField>
    <fullName>Existing_Software_Subscription_Plan_AMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AMS Field</description>
    <inlineHelpText>Select this option if there is a current Software Suscription Plan in place with this customer.</inlineHelpText>
    <label>Existing Software Subscription Plan(SSP)</label>
    <type>Checkbox</type>
</CustomField>