src/objects/Product_Attribute_Value_extension__c/fields/Fastermind_Qty_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Fastermind_Qty_Calculation__c</fullName>
    <label>Fastermind Qty Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>