src/objects/Product_Attribute_Value_extension__c/fields/High_Availability_requirement__c.field-meta.xml
<CustomField>
    <fullName>High_Availability_requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impact Direct field</description>
    <label>High Availability requirement?</label>
    <type>Checkbox</type>
</CustomField>