src/objects/Product_Attribute_Value_extension__c/fields/New_SSP__c.field-meta.xml
<CustomField>
    <fullName>New_SSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New SSP</label>
    <type>Checkbox</type>
</CustomField>