src/objects/Product_Attribute_Value_extension__c/fields/No_of_Years_for_SRS_default__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years_for_SRS_default__c</fullName>
    <description>req.6135 : &apos;Default the no of years of SRS&apos; based on the selection in the &apos;no of years of maintenance&apos; in quote/Proposal</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Same as number of years of maintenance</inlineHelpText>
    <label># of Years for SRS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>