src/objects/Product_Attribute_Value_extension__c/fields/NokiaCPQ_Geo_localisation_GIS__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Geo_localisation_GIS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of Nov release for MPW portfolio</description>
    <label>Geo-localisation (GIS)</label>
    <type>Checkbox</type>
</CustomField>