src/objects/Product_Attribute_Value_extension__c/fields/NokiaCPQ_GuidanceGeoredundancy__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_GuidanceGeoredundancy__c</fullName>
    <formula>&apos;Please select if you need Geo Redundancy.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guidance</label>
    <type>Text</type>
</CustomField>