src/objects/Product_Attribute_Value_extension__c/fields/Note_5__c.field-meta.xml
<CustomField>
    <fullName>Note_5__c</fullName>
    <description>Impact Direct Field</description>
    <formula>&apos;Items related to Multi-vendor Device&apos;+ BR() +
&apos;Detection (MVD) feature require further&apos;+ BR() +
&apos;clarification during planning phase.&apos;+ BR() +
&apos;At this stage, configuration is used&apos;+ BR() +
&apos;only for a rough budgetary estimation.&apos;+ BR() +
&apos;Contact PLM (dx-impact-plm@groups.nokia.com)&apos;+ BR() +
&apos;to finalize config.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note</label>
    <type>Text</type>
</CustomField>