src/objects/Product_Attribute_Value_extension__c/fields/Number_of_existing_APs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_existing_APs__c</fullName>
    <label># of existing Access Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>