src/objects/Product_Attribute_Value_extension__c/fields/Number_of_HP_RMS_servers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_HP_RMS_servers__c</fullName>
    <description>SPS Field</description>
    <label>Number of HP RMS servers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>