src/objects/Product_Attribute_Value_extension__c/fields/OMA_LWM2M__c.field-meta.xml
<CustomField>
    <fullName>OMA_LWM2M__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impact Direct Field</description>
    <label>OMA LWM2M</label>
    <type>Checkbox</type>
</CustomField>