src/objects/Product_Attribute_Value_extension__c/fields/Policy_Optional_Charging_Control_3__c.field-meta.xml
<CustomField>
    <fullName>Policy_Optional_Charging_Control_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SPS Field</description>
    <label>Policy Optional,Charging Control,3rd par</label>
    <type>Checkbox</type>
</CustomField>