src/objects/Product_Attribute_Value_extension__c/fields/Power_Option_7750SR712__c.field-meta.xml
<CustomField>
    <fullName>Power_Option_7750SR712__c</fullName>
    <description>7750 SR 7/12</description>
    <label>Power Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>