src/objects/Product_Attribute_Value_extension__c/fields/Reporting_Tool__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Tool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data Refinery Product</description>
    <label>Reporting Tool</label>
    <type>Checkbox</type>
</CustomField>