src/objects/Product_Attribute_Value_extension__c/fields/Upgrade_existing_customizations__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_existing_customizations__c</fullName>
    <description>Impact Direct Field</description>
    <label>Upgrade existing customizations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>