src/objects/Product_Attribute_Value_extension__c/fields/US_Order__c.field-meta.xml
<CustomField>
    <fullName>US_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SPS Field</description>
    <label>US Order?</label>
    <type>Checkbox</type>
</CustomField>