src/objects/Product_Attribute_Value_extension__c/fields/XGS_PON_Split_Ratio_Information_POLNAR__c.field-meta.xml
<CustomField>
    <fullName>XGS_PON_Split_Ratio_Information_POLNAR__c</fullName>
    <formula>&apos;XGS-PON supports higher bandwidth compared to GPON.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XGS-PON Split Ratio Information</label>
    <type>Text</type>
</CustomField>